monticore-generator/src/test/resources/cocos/invalid/A4090/A4090d.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4090;

grammar A4090d {

  A = "a";
  B = who:A  who:"Tom";

}
